--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+
 body {
-    padding: 2rem;
-}
+    background-color: #f8f9fa;
+    padding-top: 20px;
+  }
+  
+  .card {
+    border: 1px solid #dee2e6;
+    border-radius: 5px;
+  }
+  
+  .card-img-top {
+    max-height: 200px;
+    object-fit: cover;
+  }
+  
